Controller UI Fixed on Safari

--- a/client/css/controller2.css
+++ b/client/css/controller2.css
@@ -1,3 +1,9 @@
+body {
+	width:100%;
+	height:100%;
+	overflow:hidden;
+}
+
 *:not(input) {
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
